src/test/ui/consts/const-eval/union-const-eval-field.stderr
error: any use of this value will cause an error
  --> $DIR/union-const-eval-field.rs:37:5
   |
LL |     const FIELD3: Field3 = unsafe { UNION.field3 }; //~ ERROR any use of this value
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempted to read undefined bytes
   |
   = note: #[deny(const_err)] on by default

error: aborting due to previous error

